[package]
name = "studiox-switcher-new"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "3.0.0-beta.2"
faust-types = { git = "https://github.com/Frando/rust-faust.git", branch = "main" }
faust-state = { git = "https://github.com/Frando/rust-faust.git", branch = "main" }
jack = "0.7.0"
smallvec = "1.6.1"
rtrb = "0.1.3"
tui = { version = "0.15.0", features = ["termion"] }
termion = "1.5.6"
anyhow = "1.0.42"
ctrlc = "3.1.9"
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
directories = "3.0.2"
async-osc = "0.2.0"
async-std = "1.9.0"

[build-dependencies]
faust-build= { git = "https://github.com/Frando/rust-faust.git", branch = "main" }
