[package]
name = "studiox-switcher"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "3.0.0-beta.2"
faust-types = { version = "0.1", git = "https://github.com/Frando/rust-faust.git", branch = "main" }
faust-state = { version = "0.1", git = "https://github.com/Frando/rust-faust.git", branch = "main" }
jack = "0.7.0"
smallvec = "1.6.1"
rtrb = "0.1.3"
tui = { version = "0.15.0", features = ["termion"] }
termion = "1.5.6"
anyhow = "1.0.42"
ctrlc = "3.1.9"
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
directories = "3.0.2"
async-osc = "0.2.0"
async-std = "1.9.0"
log = "0.4.14"
env_logger = "0.9.0"

[build-dependencies]
faust-build = { version = "0.1", git = "https://github.com/Frando/rust-faust.git", branch = "main" }

# [patch."https://github.com/Frando/rust-faust"]
# faust-state = { path = "../rust-faust/faust-state" }
# faust-build = { path = "../rust-faust/faust-build" }
# faust-types = { path = "../rust-faust/faust-types" }
